WISH: meta-tagging of data by regex (my dream project)
WISH: double-click: more intelligent (urls etc.)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: tabbed windows (hey, just use screen...)
WISH: just for fun, do shade and tint with XRender.

5.1
	- fix a bug when parsing fontnames and another one
          for empty keymaps which could result in crashes
          (Kuang-che Wu).
        - only warn on X errors, *try* to continue (frills).
        - add COPYING back, which got lost somehow.
        - after deciding that LSM is dead, remove all traces of it,
          along with other, similar, cleanups.

5.0  Fri Feb 11 18:31:48 CET 2005
	- document a race-free hack to start urxvtd.
        - document all(?) environment variables used and set by rxvt.
        - bring xgetdefault-style resource file ordering more in line with
          Xt, and document it in rxvt(1).
        - correctly use screen-dependent resources when --enable-xgetdefault,
          and also fix some memory bugs (thanks to Thierry Reding for
          his patience and time in tracking this down).
        - bring own resource parsing more in line with X resource parsing,
          most notably, don't remove double quotes.
	- compile fix for freebsd (no ut_id) (Thierry Thomas).
        - clean up utmp and pty on X I/O errors and signals (idea
          by Joël Riou).
        - "un"document -xrm, it never really worked, was only
          available with --enable-xgetdefault, is not necessary
          and is surprisingly hard to implement.
        - shaved off some code segment size.
        - various code cleanups.
        - more keysym-mapping fixes.

4.9  Thu Feb  3 09:52:03 CET 2005
        - nuke out utmp entries completely. Should be fixed in
          original rxvt, too. (reported by James Michael Fultz).
        - resizes wil now correctly refresh the displayed text when
          -pixmap is active.
        - new option/resource imFont.