@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rxvt 7"
-.TH rxvt 7 "2005-02-14" "" "RXVT-UNICODE"
+.TH rxvt 7 "2005-02-14" "5.1" "RXVT-UNICODE"
 .SH "NAME"
 RXVT REFERENCE \- FAQ, command sequences and other background information
 .SH "SYNOPSIS"
@@ -216,8 +216,8 @@ the rxvt terminfo file with the rxvt-unicode one.
 .PD
 One reason you might want this is that some distributions or operating
 systems still compile some programs using the long-obsoleted termcap
-(Fedora Core's bash is one example) and rely on a termcap entry for
-\&\f(CW\*(C`rxvt\-unicode\*(C'\fR.
+library (Fedora Core's bash is one example) and rely on a termcap entry
+for \f(CW\*(C`rxvt\-unicode\*(C'\fR.
 .Sp
 You could use rxvt's termcap entry with resonable results in many cases.
 You can also create a termcap entry by using terminfo's infocmp program
@@ -232,7 +232,7 @@ Or you could use this termcap entry, generated by the command above:
 .Vb 19
 \&   rxvt-unicode|rxvt-unicode terminal (X Window System):\e
 \&           :am:bw:eo:km:mi:ms:xn:xo:\e
-\&           :co#80:it#8:li#24:\e
+\&           :co#80:it#8:li#24:lm#0:\e
 \&           :AL=\eE[%dL:DC=\eE[%dP:DL=\eE[%dM:DO=\eE[%dB:IC=\eE[%d@:\e
 \&           :K1=\eEOw:K2=\eEOu:K3=\eEOy:K4=\eEOq:K5=\eEOs:LE=\eE[%dD:\e
 \&           :RI=\eE[%dC:SF=\eE[%dS:SR=\eE[%dT:UP=\eE[%dA:ae=^O:al=\eE[L:\e
@@ -240,14 +240,14 @@ Or you could use this termcap entry, generated by the command above:
 \&           :cr=^M:cs=\eE[%i%d;%dr:ct=\eE[3g:dc=\eE[P:dl=\eE[M:do=^J:\e
 \&           :ec=\eE[%dX:ei=\eE[4l:ho=\eE[H:i1=\eE[?47l\eE=\eE[?1l:ic=\eE[@:\e
 \&           :im=\eE[4h:is=\eE[r\eE[m\eE[2J\eE[H\eE[?7h\eE[?1;3;4;6l\eE[4l:\e
-\&           :k0=\eE[21~:k1=\eE[11~:k2=\eE[12~:k3=\eE[13~:k4=\eE[14~:\e
-\&           :k5=\eE[15~:k6=\eE[17~:k7=\eE[18~:k8=\eE[19~:k9=\eE[20~:\e
-\&           :kD=\eE[3~:kI=\eE[2~:kN=\eE[6~:kP=\eE[5~:kb=\e177:kd=\eEOB:\e
-\&           :ke=\eE[?1l\eE>:kh=\eE[7~:kl=\eEOD:kr=\eEOC:ks=\eE[?1h\eE=:\e
-\&           :ku=\eEOA:le=^H:mb=\eE[5m:md=\eE[1m:me=\eE[m\e017:mr=\eE[7m:\e
-\&           :nd=\eE[C:rc=\eE8:sc=\eE7:se=\eE[27m:sf=^J:so=\eE[7m:sr=\eEM:\e
-\&           :st=\eEH:ta=^I:te=\eE[r\eE[?1049l:ti=\eE[?1049h:ue=\eE[24m:\e
-\&           :up=\eE[A:us=\eE[4m:vb=\eE[?5h\eE[?5l:ve=\eE[?25h:vi=\eE[?25l:\e
+\&           :k1=\eE[11~:k2=\eE[12~:k3=\eE[13~:k4=\eE[14~:k5=\eE[15~:\e
+\&           :k6=\eE[17~:k7=\eE[18~:k8=\eE[19~:k9=\eE[20~:kD=\eE[3~:\e
+\&           :kI=\eE[2~:kN=\eE[6~:kP=\eE[5~:kb=\e177:kd=\eEOB:ke=\eE[?1l\eE>:\e
+\&           :kh=\eE[7~:kl=\eEOD:kr=\eEOC:ks=\eE[?1h\eE=:ku=\eEOA:le=^H:\e
+\&           :mb=\eE[5m:md=\eE[1m:me=\eE[m\e017:mr=\eE[7m:nd=\eE[C:rc=\eE8:\e
+\&           :sc=\eE7:se=\eE[27m:sf=^J:so=\eE[7m:sr=\eEM:st=\eEH:ta=^I:\e
+\&           :te=\eE[r\eE[?1049l:ti=\eE[?1049h:ue=\eE[24m:up=\eE[A:\e
+\&           :us=\eE[4m:vb=\eE[?5h\eE[?5l:ve=\eE[?25h:vi=\eE[?25l:\e
 \&           :vs=\eE[?25h:
 .Ve
 .ie n .IP "Why does ""ls"" no longer have coloured output?" 4
