@@ -72,8 +72,8 @@ FREQUENTLY ASKED QUESTIONS
     I need a termcap file entry.
         One reason you might want this is that some distributions or
         operating systems still compile some programs using the
-        long-obsoleted termcap (Fedora Core's bash is one example) and rely
-        on a termcap entry for "rxvt-unicode".
+        long-obsoleted termcap library (Fedora Core's bash is one example)
+        and rely on a termcap entry for "rxvt-unicode".
 
         You could use rxvt's termcap entry with resonable results in many
         cases. You can also create a termcap entry by using terminfo's
@@ -85,7 +85,7 @@ FREQUENTLY ASKED QUESTIONS
 
            rxvt-unicode|rxvt-unicode terminal (X Window System):\
                    :am:bw:eo:km:mi:ms:xn:xo:\
-                   :co#80:it#8:li#24:\
+                   :co#80:it#8:li#24:lm#0:\
                    :AL=\E[%dL:DC=\E[%dP:DL=\E[%dM:DO=\E[%dB:IC=\E[%d@:\
                    :K1=\EOw:K2=\EOu:K3=\EOy:K4=\EOq:K5=\EOs:LE=\E[%dD:\
                    :RI=\E[%dC:SF=\E[%dS:SR=\E[%dT:UP=\E[%dA:ae=^O:al=\E[L:\
@@ -93,14 +93,14 @@ FREQUENTLY ASKED QUESTIONS
                    :cr=^M:cs=\E[%i%d;%dr:ct=\E[3g:dc=\E[P:dl=\E[M:do=^J:\
                    :ec=\E[%dX:ei=\E[4l:ho=\E[H:i1=\E[?47l\E=\E[?1l:ic=\E[@:\
                    :im=\E[4h:is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l:\
-                   :k0=\E[21~:k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~:\
-                   :k5=\E[15~:k6=\E[17~:k7=\E[18~:k8=\E[19~:k9=\E[20~:\
-                   :kD=\E[3~:kI=\E[2~:kN=\E[6~:kP=\E[5~:kb=\177:kd=\EOB:\
-                   :ke=\E[?1l\E>:kh=\E[7~:kl=\EOD:kr=\EOC:ks=\E[?1h\E=:\
-                   :ku=\EOA:le=^H:mb=\E[5m:md=\E[1m:me=\E[m\017:mr=\E[7m:\
-                   :nd=\E[C:rc=\E8:sc=\E7:se=\E[27m:sf=^J:so=\E[7m:sr=\EM:\
-                   :st=\EH:ta=^I:te=\E[r\E[?1049l:ti=\E[?1049h:ue=\E[24m:\
-                   :up=\E[A:us=\E[4m:vb=\E[?5h\E[?5l:ve=\E[?25h:vi=\E[?25l:\
+                   :k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~:k5=\E[15~:\
+                   :k6=\E[17~:k7=\E[18~:k8=\E[19~:k9=\E[20~:kD=\E[3~:\
+                   :kI=\E[2~:kN=\E[6~:kP=\E[5~:kb=\177:kd=\EOB:ke=\E[?1l\E>:\
+                   :kh=\E[7~:kl=\EOD:kr=\EOC:ks=\E[?1h\E=:ku=\EOA:le=^H:\
+                   :mb=\E[5m:md=\E[1m:me=\E[m\017:mr=\E[7m:nd=\E[C:rc=\E8:\
+                   :sc=\E7:se=\E[27m:sf=^J:so=\E[7m:sr=\EM:st=\EH:ta=^I:\
+                   :te=\E[r\E[?1049l:ti=\E[?1049h:ue=\E[24m:up=\E[A:\
+                   :us=\E[4m:vb=\E[?5h\E[?5l:ve=\E[?25h:vi=\E[?25l:\
                    :vs=\E[?25h:
 
     Why does "ls" no longer have coloured output?
