@@ -15,6 +15,7 @@ WISH: just for fun, do shade and tint with XRender.
 	- fix a bug when parsing fontnames and another one
           for empty keymaps which could result in crashes
           (Kuang-che Wu).
+        - new option: -embed.
         - only warn on X errors, *try* to continue (frills).
         - add COPYING back, which got lost somehow.
         - after deciding that LSM is dead, remove all traces of it,
